remember-the-throne/src/index.css
html, body {
  margin: 0;
  box-sizing: border-box;
  height: 100vh;
}

.header {
  background-color: #D4CDB2;
  color: #000;
  border-bottom: 3px solid #7B9070;
  text-align: center;
  font-size: 2rem;
  text-shadow: #7D7D7D 2px 2px 4px;
  font-weight: 700;
  padding: 5px 0px;
}
.sub-heading {
  font-weight: 400;
}
.score {
  display: grid;
  grid-template-columns: auto auto auto auto;
}
.current-score, .high-score {
  font-weight: 100;
}
.wrapper {
  width: 100vw;
  display: grid;
  grid-template-columns: auto auto auto auto;
  grid-template-rows: 275px 275px;
  grid-column-gap: 10px;
  text-align: center;
  background-color: rgba(125, 125, 125, 0.664); 
  padding-top: 10px;
}

img {
  width: 300px;
  height: 200px;
  border: #D4CDB2 2px solid;
  box-shadow:10px 7px 8px;
  border-radius: 4px;
}

img:hover {
  width: 315px;
  height: 215px;
  transition: 300ms;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

